# QuantCode

./: .gitignore  nuxt.config.ts  package-lock.json  package.json  project.md  tsconfig.json
.github/workflows/: build.yml
.quantcode/: canvas.json
.quantcode/specs/: agent-orchestration.spec.md  api-key-management.spec.md  command-palette.spec.md  diff-agent-integration.spec.md  error-handling.spec.md  file-explorer-actions.spec.md  keyboard-shortcuts.spec.md  tool-approval-flow.spec.md
app/: app.vue
app/assets/css/: main.css
app/components/Canvas/: CanvasWindow.vue  InfinityCanvas.vue  Minimap.vue
app/components/Sidebar/: EditorPanel.vue  FileExplorer.vue  FileTreeNode.vue
app/components/UI/: MessageBubble.vue  NotesBar.vue  SettingsModal.vue  StatusBar.vue  ToolApproval.vue
app/components/Windows/: AgentWindow.vue  BrowserWindow.vue  DiffWindow.vue  (+3 more)
app/pages/: index.vue
app/utils/: fileIcons.ts
composables/: useAgent.ts  useCanvas.ts  useSpecs.ts  useTerminal.ts  useWindows.ts  useWorkspace.ts  useWorkspaces.ts
lib/agents/: orchestrator.ts  roles.ts
lib/diff/: parser.ts
lib/mcp/: client.ts  tools.ts
lib/providers/: anthropic.ts  base.ts  ollama.ts  openai.ts
lib/specs/: engine.ts
shared/: types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.quantcode/specs/: test.spec.md
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: browser.rs  browser_data.rs  fs.rs  git.rs  mod.rs  terminal.rs  update.rs  workspace.rs
stores/: app.ts  browser.ts  canvas.ts  workspaces.ts
(+9 files in other folders)
