[package]
name = "quantcode"
version = "1.0.4"
edition = "2021"

[lib]
name = "quantcode_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
git2 = { version = "0.19", features = ["vendored-openssl"] }
walkdir = "2"
ignore = "0.4"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
base64 = "0.22"
url = "2"
reqwest = { version = "0.12", features = ["json"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
